--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,11 @@ section h2, section h3, section p {
 .txt-spacer {
     margin-top: 30px;
 }
+
+header {
+    background-color: grey;
+}
+
+.spacer {
+    background-color: black;
+}
